--- a/.gitignore
+++ b/.gitignore
@@ -26,12 +26,15 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
+.env
 .env.local
+.env.development
 .env.development.local
 .env.test.local
+env.production
 .env.production.local
+.nextConfig
 
 # vercel
 .vercel
 
-next.config.js
