--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.0",
     "d3": "^7.3.0",
+    "dotenv": "^16.0.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-datepicker": "^4.7.0",
